--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:id="@+id/multipleRender"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Multiple Render [In Progress]"
+        android:text="Multiple Render"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fullScreenRender"
